# bots-against-alignment

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  RULES.md  package.json
.claude/plans/: async-strolling-finch.md
.github/workflows/: api.yml  ci.yml  deploy.yml
app/: .env.example  .gitignore  README.md  bun.lockb  drizzle.config.ts  eslint.config.js  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
app/.storybook/: main.ts  preview.ts
app/drizzle/: 0000_fair_wendell_rand.sql  0000_wakeful_bloodstorm.sql  0001_mature_iron_monger.sql  0002_fantastic_monster_badoon.sql  0003_curved_lightspeed.sql  0004_regular_layla_miller.sql  0005_tiny_vindicator.sql
app/e2e/: edge-cases.test.ts  game-flow.test.ts
app/scripts/: e2e-server.sh
app/src/: app.css  hooks.server.ts
backend/: .env.template  .gitignore  Dockerfile  README.md  pyproject.toml  render.yml
backend/alembic/: env.py
backend/src/: CAHreponses.csv  __init__.py  __init__test.py  data.py  database.py  game.py  game_state.py  index.test.py  index_test.py  index_test_requestsVers.py
backend/tests/: test_api_endpoints.py  test_game_flow.py
docs/: game-flow.md
docs/specs/: 2026-02-01-sveltekit-runes-backend-migration.md
frontend/: .gitignore  README.md  bun.lockb  package-lock.json  package.json  playwright.config.ts  svelte.config.js
frontend/scripts/: e2e-server.sh  gun-relay.js  gun-relay.ts
frontend/src/: app.html
frontend/tests/: game-flow.test.ts  gun-chat.test.ts
scripts/: dev-all.mjs  dev-all.ts  free-ports.mjs  free-ports.ts
(+176 files in other folders)
