[tool.poetry]
name = "bots-against-alignment"
version = "0.1.0"
description = ""
authors = ["Ethan Hathaway <erhathaway@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}


[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
