[tool.poetry]
name = "bots-against-alignment"
version = "0.1.0"
description = ""
authors = ["Ethan Hathaway <erhathaway@gmail.com>","Conor Cox <cdcox1gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10.0"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
openai = "^0.27.4"
sqlalchemy = "^2.0.10"
pydantic = "^1.10.7"
ipdb = "^0.13.13"
slowapi = "^0.1.8"
httpx = "^0.24.0"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
